--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ http://www.templatemo.com/tm-498-stimulus
                   >Get Started</a
                 >
                 <a
-                href="Devakumaran M Resume.pdf"
+                href="MY RESUME.pdf"
                 class="wow fadeInUp smoothScroll section-btn btn btn-success"
                 data-wow-delay="1.4s"
                 >Resume</a
